resources/tests/invalid_syntax/var_read.ct
//Error: Variable of name 'hell' does not exist!
//1
fn hello()->void
{
  var read = 10;
  {
    var hel = 10;
    read + hell; //<- error
  }
  read - 10;
}